# playground

./: rdp.cpp  tricpp.cpp
docker/container-x86-cudev/: Dockerfile
docker/container-x86-cudev/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-x86-dev/: Dockerfile
docker/container-x86-dev/.devcontainer/: devcontainer.json  docker-compose.yaml
src/object_detector/: CMakeLists.txt  package.xml
src/object_detector/config/: object_detector.yaml
src/object_detector/include/object_detector/: object_detector.hpp
src/object_detector/launch/: object_detector.launch.py
src/object_detector/src/: object_detector_app.cpp
src/object_detector/src/object_detector/: object_detector.cpp  od_services.cpp  od_subscriptions.cpp  od_utils.cpp  params.yaml
src/playground_interfaces/: CMakeLists.txt  package.xml
src/playground_interfaces/action/: FindPath.action
src/usb_camera_driver/: CMakeLists.txt  README.md  package.xml
src/usb_camera_driver/config/: config.yaml
src/usb_camera_driver/include/usb_camera_driver/: usb_camera_driver.hpp
src/usb_camera_driver/launch/: usb_camera_driver_app.launch.py
src/usb_camera_driver/src/: ucd_app.cpp
src/usb_camera_driver/src/usb_camera_driver/: params.yaml  ucd_utils.cpp  usb_camera_driver.cpp
src/voronoi_planner/: CMakeLists.txt  package.xml  print_graph.py  tree.txt
src/voronoi_planner/config/: voronoi_planner.yaml
src/voronoi_planner/include/voronoi_planner/: rdp.hpp  voronoi_planner.hpp
src/voronoi_planner/launch/: voronoi_planner.launch.py
src/voronoi_planner/src/: voronoi_planner_app.cpp
src/voronoi_planner/src/voronoi_planner/: astar.cpp  dictionary.cpp  geometry.cpp  params.yaml  qhull.cpp  rdp.cpp  tricpp.cpp  voronoi.cpp  voronoi_planner.cpp  voronoi_planner_actions.cpp  voronoi_planner_utils.cpp
tools/openGJK/: CMakeLists.txt  openGJK.c  openGJK.cpp
tools/openGJK/examples/c/: CMakeLists.txt  main.c  main.cpp
tools/openGJK/include/openGJK/: openGJK.h  openGJK.hpp
tools/toppra/cpp/: CMakeLists.txt
tools/toppra/cpp/tests/: test_algorithm.cpp
tools/voronoi/: Makefile  test_voro  test_voro.cpp  test_voro.hpp  voronoi.cpp  voronoi2.cpp
