<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usb_camera_driver</name>
  <version>1.0.0</version>
  <description>ROS 2 driver node for monocular USB cameras.</description>
  <maintainer email="isl.torvergata@gmail.com">Intelligent Systems Lab</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>camera_calibration_parsers</depend>
  <depend>camera_info_manager</depend>
  <depend>dua_app_management</depend>
  <depend>dua_node</depend>
  <depend>dua_qos</depend>
  <depend>image_transport</depend>
  <depend>params_manager</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>theora_wrappers</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
