<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voronoi_planner</name>
  <version>1.0.0</version>
  <description>VoronoiPlanner module.</description>
  <maintainer email="isl.torvergata@gmail.com">Intelligent Systems Lab</maintainer>
  <license>GNU GPL v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dua_app_management</depend>
  <depend>dua_interfaces</depend>
  <depend>dua_node</depend>
  <depend>dua_qos</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>params_manager</depend>
  <depend>playground_interfaces</depend>
  <depend>rclcpp_components</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
